<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="SaveInMemory_Recipe" Id="{2eb867b7-281f-4918-a943-3695dc755aeb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION SaveInMemory_Recipe : DINT
VAR_INPUT
    sData : REFERENCE TO STRING(20000);
END_VAR
VAR
    fbJson : FB_JsonSaxWriter;

    i   : INT;
    ii  : INT;
    iii : INT;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbJson.ResetDocument();
//  global object
fbJson.StartObject();

fbJson.AddKey('iStationTimeDef1');
fbJson.StartArray();

FOR i := 1 TO CONST.STATION_NUMBER BY 1 DO
    fbJson.AddDint(PERS.iStationTimeDef1[i]);
END_FOR

fbJson.EndArray();
fbJson.AddKey('iStationTimeDef2');
fbJson.StartArray();

FOR i := 1 TO CONST.STATION_NUMBER BY 1 DO
    fbJson.AddDint(PERS.iStationTimeDef2[i]);
END_FOR

fbJson.EndArray();
fbJson.addKey('recipeList');
fbJson.StartArray();

FOR i := 0 TO CONST.MAX_RECIPE_NUMBER BY 1 DO
    fbJson.StartObject();
    fbJson.addKey('linearAxis');
    fbJson.StartArray();

    FOR ii := 0 TO LinearAxis_e._max - 1 BY 1 DO
        fbJson.StartObject();
        fbJson.addKey('defProfile');
        fbJson.StartObject();
        fbJson.AddKey('lrVelocity');
        fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].defProfile.lrVelocity);
        fbJson.AddKey('lrAccel');
        fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].defProfile.lrAccel);
        fbJson.AddKey('lrDecel');
        fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].defProfile.lrDecel);
        fbJson.AddKey('lrJerk');
        fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].defProfile.lrJerk);
        fbJson.EndObject();
        fbJson.addKey('movesList');
        fbJson.StartArray();

        FOR iii := 0 TO CONST.MAX_VECTOR_LIST BY 1 DO
            fbJson.StartObject();
            fbJson.AddKey('lrVelocity');
            fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].movesList[iii].lrVelocity);
            fbJson.AddKey('lrAccel');
            fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].movesList[iii].lrAccel);
            fbJson.AddKey('lrDecel');
            fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].movesList[iii].lrDecel);
            fbJson.AddKey('lrJerk');
            fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].movesList[iii].lrJerk);
            fbJson.AddKey('lrPosition');
            fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].movesList[iii].lrPosition);
            fbJson.AddKey('TriggerType');
            fbJson.AddDint(PERS.recipeList[i].linearAxis[ii].movesList[iii].TriggerType);
            fbJson.AddKey('TriggerPos');
            fbJson.AddLreal(PERS.recipeList[i].linearAxis[ii].movesList[iii].TriggerPos);
            fbJson.AddKey('Timeout_ms');
            fbJson.AddDint(PERS.recipeList[i].linearAxis[ii].movesList[iii].Timeout_ms);
            fbJson.EndObject();
        END_FOR

        fbJson.EndArray();
        fbJson.EndObject();
    END_FOR

    fbJson.EndArray();
    fbJson.addKey('cylinder2Pos');
    fbJson.StartArray();

    FOR ii := 0 TO StationList_e._max - 1 BY 1 DO
        FOR iii := 0 TO CONST.MAX_CYLINDER_PER_STATION - 1 BY 1 DO
            fbJson.StartObject();
            fbJson.AddKey('toGS_alarm_time');
            fbJson.AddDint(PERS.recipeList[i].cylinder2Pos[ii][iii].toGS_alarm_time);
            fbJson.AddKey('toAS_alarm_time');
            fbJson.AddDint(PERS.recipeList[i].cylinder2Pos[ii][iii].toAS_alarm_time);
            fbJson.AddKey('toGS_wait_time');
            fbJson.AddDint(PERS.recipeList[i].cylinder2Pos[ii][iii].toGS_wait_time);
            fbJson.AddKey('toAS_wait_time');
            fbJson.AddDint(PERS.recipeList[i].cylinder2Pos[ii][iii].toAS_wait_time);
            fbJson.EndObject();
        END_FOR
    END_FOR

    fbJson.EndArray();
    fbJson.AddKey('stationOffsets');
    fbJson.StartArray();

    FOR ii := 0 TO CONST.STATION_NUMBER - 1 BY 1 DO
        fbJson.AddLreal(PERS.recipeList[i].stationOffsets[ii]);
    END_FOR

    fbJson.EndArray();
    fbJson.addKey('st110');
    fbJson.StartObject();
    fbJson.AddKey('xUseVerLeft');
    fbJson.AddBool(PERS.recipeList[i].st110.xUseVerLeft);
    fbJson.AddKey('xUseVerRight');
    fbJson.AddBool(PERS.recipeList[i].st110.xUseVerRight);
    fbJson.addKey('FeederConfig');
    fbJson.StartObject();
    fbJson.AddKey('InFilterDelay');
    fbJson.AddDint(PERS.recipeList[i].st110.FeederConfig.InFilterDelay);
    fbJson.AddKey('StartDelay');
    fbJson.AddDint(PERS.recipeList[i].st110.FeederConfig.StartDelay);
    fbJson.AddKey('StopDelay');
    fbJson.AddDint(PERS.recipeList[i].st110.FeederConfig.StopDelay);
    fbJson.AddKey('EmptyDelay');
    fbJson.AddDint(PERS.recipeList[i].st110.FeederConfig.EmptyDelay);
    fbJson.EndObject();
    fbJson.EndObject();
    fbJson.addKey('st115');
    fbJson.StartObject();
    fbJson.AddKey('xUseVerLeft');
    fbJson.AddBool(PERS.recipeList[i].st115.xUseVerLeft);
    fbJson.AddKey('xUseVerRight');
    fbJson.AddBool(PERS.recipeList[i].st115.xUseVerRight);
    fbJson.addKey('FeederConfig');
    fbJson.StartObject();
    fbJson.AddKey('InFilterDelay');
    fbJson.AddDint(PERS.recipeList[i].st115.FeederConfig.InFilterDelay);
    fbJson.AddKey('StartDelay');
    fbJson.AddDint(PERS.recipeList[i].st115.FeederConfig.StartDelay);
    fbJson.AddKey('StopDelay');
    fbJson.AddDint(PERS.recipeList[i].st115.FeederConfig.StopDelay);
    fbJson.AddKey('EmptyDelay');
    fbJson.AddDint(PERS.recipeList[i].st115.FeederConfig.EmptyDelay);
    fbJson.EndObject();
    fbJson.EndObject();
    fbJson.addKey('st120');
    fbJson.StartObject();
    fbJson.AddKey('xUseVerLeft');
    fbJson.AddBool(PERS.recipeList[i].st120.xUseVerLeft);
    fbJson.AddKey('xUseVerRight');
    fbJson.AddBool(PERS.recipeList[i].st120.xUseVerRight);
    fbJson.addKey('FeederConfigLeft');
    fbJson.StartObject();
    fbJson.AddKey('InFilterDelay');
    fbJson.AddDint(PERS.recipeList[i].st120.FeederConfigLeft.InFilterDelay);
    fbJson.AddKey('StartDelay');
    fbJson.AddDint(PERS.recipeList[i].st120.FeederConfigLeft.StartDelay);
    fbJson.AddKey('StopDelay');
    fbJson.AddDint(PERS.recipeList[i].st120.FeederConfigLeft.StopDelay);
    fbJson.AddKey('EmptyDelay');
    fbJson.AddDint(PERS.recipeList[i].st120.FeederConfigLeft.EmptyDelay);
    fbJson.EndObject();
    fbJson.addKey('FeederConfigRight');
    fbJson.StartObject();
    fbJson.AddKey('InFilterDelay');
    fbJson.AddDint(PERS.recipeList[i].st120.FeederConfigRight.InFilterDelay);
    fbJson.AddKey('StartDelay');
    fbJson.AddDint(PERS.recipeList[i].st120.FeederConfigRight.StartDelay);
    fbJson.AddKey('StopDelay');
    fbJson.AddDint(PERS.recipeList[i].st120.FeederConfigRight.StopDelay);
    fbJson.AddKey('EmptyDelay');
    fbJson.AddDint(PERS.recipeList[i].st120.FeederConfigRight.EmptyDelay);
    fbJson.EndObject();
    fbJson.EndObject();
    fbJson.addKey('st125');
    fbJson.StartObject();
    fbJson.addKey('ST125_Recipe_t');
    fbJson.StartObject();
    fbJson.AddKey('xUseVerLeft');
    fbJson.AddBool(PERS.recipeList[i].st125.xUseVerLeft);
    fbJson.AddKey('xUseVerRight');
    fbJson.AddBool(PERS.recipeList[i].st125.xUseVerRight);
    fbJson.addKey('FeederConfig');
    fbJson.StartObject();
    fbJson.AddKey('InFilterDelay');
    fbJson.AddDint(PERS.recipeList[i].st125.FeederConfig.InFilterDelay);
    fbJson.AddKey('StartDelay');
    fbJson.AddDint(PERS.recipeList[i].st125.FeederConfig.StartDelay);
    fbJson.AddKey('StopDelay');
    fbJson.AddDint(PERS.recipeList[i].st125.FeederConfig.StopDelay);
    fbJson.AddKey('EmptyDelay');
    fbJson.AddDint(PERS.recipeList[i].st125.FeederConfig.EmptyDelay);
    fbJson.EndObject();
    fbJson.EndObject();
    fbJson.EndObject();
    fbJson.addKey('st145');
    fbJson.StartObject();
    fbJson.addKey('ST145_Recipe_t');
    fbJson.StartObject();
    fbJson.AddKey('xUseVerLeft');
    fbJson.AddBool(PERS.recipeList[i].st145.xUseVerLeft);
    fbJson.AddKey('xUseVerRight');
    fbJson.AddBool(PERS.recipeList[i].st145.xUseVerRight);
    fbJson.addKey('FeederConfig');
    fbJson.StartObject();
    fbJson.AddKey('InFilterDelay');
    fbJson.AddDint(PERS.recipeList[i].st145.FeederConfig.InFilterDelay);
    fbJson.AddKey('StartDelay');
    fbJson.AddDint(PERS.recipeList[i].st145.FeederConfig.StartDelay);
    fbJson.AddKey('StopDelay');
    fbJson.AddDint(PERS.recipeList[i].st145.FeederConfig.StopDelay);
    fbJson.AddKey('EmptyDelay');
    fbJson.AddDint(PERS.recipeList[i].st145.FeederConfig.EmptyDelay);
    fbJson.EndObject();
    fbJson.EndObject();
    fbJson.EndObject();
    fbJson.addKey('st180');
    fbJson.StartObject();
    fbJson.AddKey('xUseVerLeft');
    fbJson.AddBool(PERS.recipeList[i].st180.xUseVerLeft);
    fbJson.AddKey('xUseVerRight');
    fbJson.AddBool(PERS.recipeList[i].st180.xUseVerRight);
    fbJson.EndObject();
    fbJson.EndObject();
END_FOR

fbJson.EndArray();
fbJson.AddKey('iRecipeCurrent');
fbJson.AddDint(PERS.iRecipeCurrent);

// end global object
fbJson.EndObject();
// end of file
SaveInMemory_Recipe := TO_DINT(fbJson.CopyDocument(sData, fbJson.GetDocumentLength()));
fbJson.ResetDocument();
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>